--- a/esoteric/vite-sass/src/scss/_main.scss
+++ b/esoteric/vite-sass/src/scss/_main.scss
@@ -50,10 +50,6 @@
    &:hover {
       opacity: 1;
    }
-   @include mixins.viewport-xl {
-      font-size: 1rem;
-      padding: 0.5rem 1rem;
-   }
 }
 
 .toggle_theme-btn {
@@ -107,7 +103,14 @@
       &::before {
          content: 'Switch Theme @';
       }
-      @include mixins.viewport-xl {
+   }
+
+   @include mixins.viewport-xl {
+      font-size: 1rem;
+      padding: 0.5rem 1rem;
+
+      &:hover,
+      &:active {
          font-size: 1.25rem;
          width: 200px;
          padding: 0.5rem 1rem;
@@ -116,13 +119,27 @@
 }
 
 .top-btn {
+   display: none;
    position: fixed;
    bottom: 5%;
-   min-width: 70px;
    width: fit-content;
-   border-radius: 0.75rem;
-   &:hover {
-      border-radius: 2rem;
+   padding: 1rem;
+   margin: 0;
+   border-radius: 1rem;
+
+   svg {
+      height: 2.2rem;
+      width: auto;
+      fill: var(--primary-container);
+      stroke: var(--primary-container);
+   }
+
+   @include mixins.viewport-xxl {
+      padding: 1rem;
+      svg {
+         height: 3rem;
+         width: 3rem;
+      }
    }
 }
 
