--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -511,17 +511,22 @@
             transform: rotate(-10deg);
             padding: 1.2rem;
             padding-bottom: 3.8rem;
-            border: 1px solid var(--primary-container);
+            border: 0.2rem solid var(--primary-container);
             background: var(--surface-container-lowest);
             position: relative;
 
+            @include mixins.viewport-md {
+               border-width: 0.35rem;
+            }
             @include mixins.viewport-lg {
                width: 20rem;
                height: 22rem;
                transform: rotate(8deg);
                margin: auto;
+               border-width: 0.4rem;
             }
             @include mixins.viewport-xl {
+               border-width: 0.5rem;
                width: 30rem;
                height: 32rem;
                margin: 5vw auto;
