--- a/esoteric/vite-sass/src/colors/gold/_light.scss
+++ b/esoteric/vite-sass/src/colors/gold/_light.scss
@@ -1,7 +1,7 @@
-$md-sys-color-primary: rgb(235 191 126);
+$md-sys-color-primary: rgb(105 74 19);
 $md-sys-color-surface-tint: rgb(121 88 33);
 $md-sys-color-on-primary: rgb(255 255 255);
-$md-sys-color-primary-container: rgb(221, 182, 139);
+$md-sys-color-primary-container: rgb(146 110 53);
 $md-sys-color-on-primary-container: rgb(255 255 255);
 $md-sys-color-secondary: rgb(109 92 66);
 $md-sys-color-on-secondary: rgb(255 255 255);
