--- a/esoteric/vite-sass/src/colors/pink/_light.scss
+++ b/esoteric/vite-sass/src/colors/pink/_light.scss
@@ -1,49 +1,49 @@
-$md-sys-color-primary: rgb(143 73 83);
-$md-sys-color-surface-tint: rgb(143 73 83);
+$md-sys-color-primary: rgb(105 68 98);
+$md-sys-color-surface-tint: rgb(121 82 113);
 $md-sys-color-on-primary: rgb(255 255 255);
-$md-sys-color-primary-container: rgb(255 217 220);
-$md-sys-color-on-primary-container: rgb(59 7 19);
-$md-sys-color-secondary: rgb(118 86 89);
+$md-sys-color-primary-container: rgb(177, 139, 169);
+$md-sys-color-on-primary-container: rgb(255 255 255);
+$md-sys-color-secondary: rgb(108 89 103);
 $md-sys-color-on-secondary: rgb(255 255 255);
-$md-sys-color-secondary-container: rgb(255 217 220);
-$md-sys-color-on-secondary-container: rgb(44 21 24);
-$md-sys-color-tertiary: rgb(120 88 48);
+$md-sys-color-secondary-container: rgb(249 223 240);
+$md-sys-color-on-secondary-container: rgb(87 69 82);
+$md-sys-color-tertiary: rgb(118 66 63);
 $md-sys-color-on-tertiary: rgb(255 255 255);
-$md-sys-color-tertiary-container: rgb(255 221 183);
-$md-sys-color-on-tertiary-container: rgb(42 23 0);
+$md-sys-color-tertiary-container: rgb(160 101 97);
+$md-sys-color-on-tertiary-container: rgb(255 255 255);
 $md-sys-color-error: rgb(186 26 26);
 $md-sys-color-on-error: rgb(255 255 255);
 $md-sys-color-error-container: rgb(255 218 214);
 $md-sys-color-on-error-container: rgb(65 0 2);
-$md-sys-color-background: rgb(255 248 247);
-$md-sys-color-on-background: rgb(34 25 26);
-$md-sys-color-surface: rgb(255 248 247);
-$md-sys-color-on-surface: rgb(34 25 26);
-$md-sys-color-surface-variant: rgb(244 221 222);
-$md-sys-color-on-surface-variant: rgb(82 67 68);
-$md-sys-color-outline: rgb(132 115 116);
-$md-sys-color-outline-variant: rgb(215 193 195);
+$md-sys-color-background: rgb(255 247 249);
+$md-sys-color-on-background: rgb(30 26 29);
+$md-sys-color-surface: rgb(255 247 249);
+$md-sys-color-on-surface: rgb(30 26 29);
+$md-sys-color-surface-variant: rgb(237 222 230);
+$md-sys-color-on-surface-variant: rgb(78 68 74);
+$md-sys-color-outline: rgb(127 116 123);
+$md-sys-color-outline-variant: rgb(209 195 202);
 $md-sys-color-shadow: rgb(0 0 0);
 $md-sys-color-scrim: rgb(0 0 0);
-$md-sys-color-inverse-surface: rgb(56 46 47);
-$md-sys-color-inverse-on-surface: rgb(255 237 237);
-$md-sys-color-inverse-primary: rgb(255 178 186);
-$md-sys-color-primary-fixed: rgb(255 217 220);
-$md-sys-color-on-primary-fixed: rgb(59 7 19);
-$md-sys-color-primary-fixed-dim: rgb(255 178 186);
-$md-sys-color-on-primary-fixed-variant: rgb(114 51 60);
-$md-sys-color-secondary-fixed: rgb(255 217 220);
-$md-sys-color-on-secondary-fixed: rgb(44 21 24);
-$md-sys-color-secondary-fixed-dim: rgb(229 189 192);
-$md-sys-color-on-secondary-fixed-variant: rgb(92 63 66);
-$md-sys-color-tertiary-fixed: rgb(255 221 183);
-$md-sys-color-on-tertiary-fixed: rgb(42 23 0);
-$md-sys-color-tertiary-fixed-dim: rgb(233 191 143);
-$md-sys-color-on-tertiary-fixed-variant: rgb(94 65 27);
-$md-sys-color-surface-dim: rgb(231 214 215);
-$md-sys-color-surface-bright: rgb(255 248 247);
+$md-sys-color-inverse-surface: rgb(51 47 50);
+$md-sys-color-inverse-on-surface: rgb(247 238 241);
+$md-sys-color-inverse-primary: rgb(232 184 220);
+$md-sys-color-primary-fixed: rgb(255 215 244);
+$md-sys-color-on-primary-fixed: rgb(47 15 43);
+$md-sys-color-primary-fixed-dim: rgb(232 184 220);
+$md-sys-color-on-primary-fixed-variant: rgb(95 59 89);
+$md-sys-color-secondary-fixed: rgb(245 219 236);
+$md-sys-color-on-secondary-fixed: rgb(37 23 34);
+$md-sys-color-secondary-fixed-dim: rgb(216 192 208);
+$md-sys-color-on-secondary-fixed-variant: rgb(83 65 79);
+$md-sys-color-tertiary-fixed: rgb(255 218 215);
+$md-sys-color-on-tertiary-fixed: rgb(53 15 14);
+$md-sys-color-tertiary-fixed-dim: rgb(252 181 176);
+$md-sys-color-on-tertiary-fixed-variant: rgb(106 57 54);
+$md-sys-color-surface-dim: rgb(224 216 219);
+$md-sys-color-surface-bright: rgb(255 247 249);
 $md-sys-color-surface-container-lowest: rgb(255 255 255);
-$md-sys-color-surface-container-low: rgb(255 240 240);
-$md-sys-color-surface-container: rgb(252 234 234);
-$md-sys-color-surface-container-high: rgb(246 228 229);
-$md-sys-color-surface-container-highest: rgb(240 222 223);
+$md-sys-color-surface-container-low: rgb(250 241 244);
+$md-sys-color-surface-container: rgb(244 236 239);
+$md-sys-color-surface-container-high: rgb(239 230 233);
+$md-sys-color-surface-container-highest: rgb(233 224 227);
