--- a/esoteric/vite-sass/src/pages/register-form/register-form.scss
+++ b/esoteric/vite-sass/src/pages/register-form/register-form.scss
@@ -25,6 +25,7 @@
    text-align: center;
    align-items: center;
    box-shadow: 3rem 1rem 3rem 0 var(--scrim);
+   z-index: 3;
 
    &__heading {
       font-size: 2.6rem;
