--- a/esoteric/vite-sass/src/scss/_main.scss
+++ b/esoteric/vite-sass/src/scss/_main.scss
@@ -121,12 +121,13 @@
 .top-btn {
    display: none;
    position: fixed;
-   bottom: 5%;
+   bottom: 2%;
+   right: 2%;
    width: fit-content;
    padding: 1rem;
    margin: 0;
    border-radius: 1rem;
-   z-index: 2;
+   z-index: 1;
 
    svg {
       height: 2.2rem;
@@ -149,6 +150,7 @@
 }
 
 .cta {
+   display: block;
    position: sticky;
    bottom: 0;
    width: 100%;
@@ -156,8 +158,13 @@
    border-radius: 2.2rem 2.2rem 0 0;
    text-align: center;
    background: var(--primary-container);
-   z-index: 1;
    margin-top: -2.25rem;
+   transition: 750ms ease-in;
+   z-index: 0;
+
+   &.hidden {
+      visibility: hidden;
+   }
 
    &__button {
       margin: auto;
