--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -11,7 +11,6 @@
    justify-content: space-between;
    flex-flow: column wrap;
    position: relative;
-   // background-color: var(--surface);
 
    &__title {
       max-width: 88vw;
@@ -20,8 +19,6 @@
       text-transform: uppercase;
 
       &_title {
-         font-size: 2.5rem;
-
          &-cursive,
          &-colored {
             font-family: 'Caveat', cursive;
@@ -104,13 +101,12 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-      // background: light-dark(rgba(var(--shadow-black), 0.4), rgba(var(--shadow-white), 0.4));
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 40%, rgba(255, 255, 255, 0) 75%);
    }
 }
 
 .header {
    height: 200vw;
-   min-height: 200vw;
    background-image: url('@images/photo/IMG_8700.jpg');
    background-position: center 10%;
 
@@ -120,7 +116,8 @@
    &__info {
       display: flex;
       flex-direction: column;
-      gap: 1.4rem;
+      align-items: center;
+      gap: 7.5vw;
       max-width: 87.5vw;
       margin: 0 auto;
    }
@@ -139,36 +136,51 @@
    }
 
    &__description {
-      font-size: 3.2rem;
-      line-height: 3.2rem;
-      font-weight: 600;
+      font-size: 7vw;
+      line-height: 6vw;
+      font-weight: 500;
       font-family: 'Caveat', cursive;
-      color: var(--primary-container);
+      color: var(--primary-fixed);
    }
 
    &__content {
-      margin: 0 2rem 5rem;
+      margin-bottom: 15vw;
+      gap: 5vw;
    }
 
    &__main {
-      gap: 1.6rem;
+      gap: 5vw;
       margin-bottom: 3rem;
    }
 
+   &__title,
+   &__subtitle,
+   &__text {
+      color: var(--on-primary-container);
+   }
+
    &__title {
-      font-size: 1.625rem;
+      max-width: 94%;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 4vw;
+      font-weight: 600;
       text-transform: uppercase;
    }
 
    &__subtitle {
-      font-size: 1.75rem;
+      font-size: 4.375vw;
       font-weight: 400;
+   }
+
+   &__text {
+      font-size: 3.75vw;
+      max-width: 80%;
    }
 
    &__button {
       padding: 1.1rem 4rem;
       border-radius: 1.125rem;
-      margin: 0 2rem 0.5rem;
+      width: 100%;
       color: var(--on-primary-container);
       background-color: var(--primary-container);
       &-strike {
@@ -185,6 +197,8 @@
 
    &__cta {
       justify-self: flex-end;
+      max-width: unset;
+      width: 80vw;
    }
 
    &__timer {
@@ -194,9 +208,12 @@
       }
    }
 
+   @include mixins.viewport-md {
+      height: 130vw;
+   }
+
    @include mixins.viewport-lg {
       height: 90vw;
-      min-height: 90vw;
       flex-flow: column;
 
       &__content,
@@ -242,7 +259,6 @@
 
    @include mixins.viewport-xl {
       height: 65vw;
-      min-height: 65vw;
 
       &__title {
          font-size: 1.65rem;
@@ -256,7 +272,6 @@
 
    @include mixins.viewport-xxl {
       height: 56.25vw;
-      min-height: 56.25vw;
       justify-content: space-between;
       align-items: stretch;
 
@@ -1261,6 +1276,10 @@
       }
    }
 
+   &__title {
+      font-size: 4.688vw;
+   }
+
    &__title,
    &__text {
       max-width: 80%;
@@ -1270,7 +1289,7 @@
    }
    &__text {
       max-width: 87%;
-      font-size: 1.375rem;
+      padding: 1rem 0;
    }
 
    @include mixins.viewport-xl {
@@ -1317,6 +1336,7 @@
       }
    }
    &__label {
+      font-size: 4.65vw;
       font-weight: 600;
       margin-bottom: 0.25rem;
    }
