--- a/esoteric/vite-sass/src/scss/_fonts.scss
+++ b/esoteric/vite-sass/src/scss/_fonts.scss
@@ -1,13 +1,26 @@
 @font-face {
    font-family: 'Montserrat';
-   src: url('../assets/fonts/Montserrat-Regular.woff2') format('woff2');
+   src: url('../assets/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
    font-weight: 400;
    font-display: swap;
 }
 
 @font-face {
    font-family: 'Montserrat';
-   src: url('../assets/fonts/Montserrat-Bold.woff2') format('woff2');
+   src: url('../assets/fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
+   font-weight: 500;
+   font-display: swap;
+}
+@font-face {
+   font-family: 'Montserrat';
+   src: url('../assets/fonts/Montserrat/Montserrat-SemiBold.ttf') format('truetype');
+   font-weight: 600;
+   font-display: swap;
+}
+
+@font-face {
+   font-family: 'Montserrat';
+   src: url('../assets/fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
    font-weight: 700;
    font-display: swap;
 }
