--- a/esoteric/vite-sass/src/scss/_main.scss
+++ b/esoteric/vite-sass/src/scss/_main.scss
@@ -145,18 +145,14 @@
    }
 }
 
-.colored {
-   color: var(--primary-container);
-}
-
 .cta {
-   display: block;
-   visibility: visible;
+   display: flex;
+   align-items: center;
    opacity: 1;
    position: sticky;
    bottom: 0;
    width: 100%;
-   padding: 2rem 1rem;
+   height: 22vw;
    border-radius: 2rem 2rem 0 0;
    text-align: center;
    background: var(--primary-container);
@@ -175,8 +171,10 @@
    &__button {
       height: auto;
       margin: auto;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
+      padding: 3vw 5vw;
+      font-size: 3.4vw;
+      color: var(--primary);
+      font-weight: 600;
       border-radius: 1rem;
       background: var(--surface-container-lowest);
       &:hover {
@@ -188,9 +186,10 @@
    }
 
    @include mixins.viewport-md {
+      height: 12vw;
       &__button {
          padding: 1.2rem 2.4rem;
-         font-size: 1.4;
+         font-size: 2.4vw;
       }
    }
 
