feat: modified styles header up to 1280 xl vw template

--- a/esoteric/vite-sass/src/scss/_mixins.scss
+++ b/esoteric/vite-sass/src/scss/_mixins.scss
@@ -8,6 +8,11 @@
       @content;
    }
 }
+@mixin viewport-lg-med {
+   @media (min-width: 991px) {
+      @content;
+   }
+}
 @mixin viewport-xl {
    @media (min-width: 1023px) {
       @content;
