--- a/esoteric/vite-sass/src/scss/_global.scss
+++ b/esoteric/vite-sass/src/scss/_global.scss
@@ -57,7 +57,7 @@ li {
       font-size: 1.25rem;
    }
    @include mixins.viewport-xxl {
-      font-size: 1.625rem;
+      font-size: 1.25vw;
    }
 }
 
@@ -76,35 +76,22 @@ h3,
 .title,
 .section__title_title {
    font-family: 'Montserrat', sans-serif;
-   // color: var(--outline);
    color: var(--on-surface-variant);
 
    font-size: 6.1vw;
    font-weight: 500;
 
-   // @include mixins.viewport-md {
-   //    font-size: 1rem;
-   // }
+   @include mixins.viewport-md {
+      font-size: 3.63vw;
+   }
 
-   @include mixins.viewport-xl {
-      font-size: 3rem;
+   @include mixins.viewport-xxl {
+      font-size: 3.73vw;
    }
 }
 
-h4,
-h5,
-h6,
-.subtitle {
-   font-size: 2.4rem;
-}
-
-.footer {
-   padding: 3rem 0;
-   font-size: 1.625rem;
-
-   a {
-      text-decoration: none;
-   }
+a {
+   text-decoration: none;
 }
 
 button,
