--- a/esoteric/vite-sass/src/scss/_main.scss
+++ b/esoteric/vite-sass/src/scss/_main.scss
@@ -193,6 +193,8 @@
       }
    }
    @include mixins.viewport-lg {
+      height: 9vw;
+      border-radius: 3vw 3vw 0 0;
       &__button {
          font-size: 2vw;
       }
