--- a/esoteric/vite-sass/src/pages/register-form/register-form.scss
+++ b/esoteric/vite-sass/src/pages/register-form/register-form.scss
@@ -25,13 +25,11 @@
    align-items: center;
    box-shadow: 3rem 1rem 3rem 0 var(--scrim);
    z-index: 3;
-
    &__heading {
       font-size: 5vw;
       font-weight: 600;
       text-transform: uppercase;
    }
-
    &__description p {
       font-size: 3.5vw;
       margin: 2vw 0;
@@ -39,13 +37,11 @@
          font-weight: 600;
       }
    }
-
    &__after-text {
       font-size: 2.8vw;
       font-weight: 500;
       max-width: 87%;
    }
-
    .form {
       display: flex;
       flex-direction: column;
@@ -88,7 +84,6 @@
          }
       }
    }
-
    .close-btn {
       position: absolute;
       width: 7vw;
@@ -118,7 +113,6 @@
          opacity: 0.9;
       }
    }
-
    &.hidden {
       visibility: hidden;
       z-index: -99;
@@ -128,7 +122,6 @@
          color: var(--outline);
       }
    }
-
    @include mixins.viewport-md {
       width: 80vw;
       padding: 6vw 4vw;
@@ -162,18 +155,45 @@
          height: 6vw;
       }
    }
-
    @include mixins.viewport-lg {
-      width: 50vw;
+      max-width: unset;
+      width: 75vw;
+
       &__heading {
          font-size: 3vw;
       }
+      &__description p {
+         font-size: 1.8vw;
+      }
+      &__after-text {
+         font-size: 1.5vw;
+      }
+      .form {
+         gap: 1.4vw;
+         &__button-submit,
+         &__input {
+            width: 80%;
+            font-size: 1.65vw;
+         }
+         &__button-submit {
+            font-size: 1.8vw;
+            padding: 1.4vw;
+         }
+      }
+      .close-btn {
+         width: 5vw;
+         height: 5vw;
+      }
    }
-
    @include mixins.viewport-xl {
       max-width: 80%;
       max-height: 98vh;
-
+      &__heading {
+         font-size: 2.4vw;
+      }
+      &__description p {
+         font-size: 1.8vw;
+      }
       .form {
          &__button-submit,
          &__input {
@@ -183,12 +203,42 @@
    }
    @include mixins.viewport-xxl {
       max-width: unset;
+      padding-bottom: 6vw;
+      width: 75vw;
+      gap: 1vw;
+      &__heading {
+         font-size: 1.8vw;
+      }
+      &__after-text {
+         font-size: 1.3vw;
+      }
+      .form {
+         gap: 1.5vw;
+         &__button-submit {
+            padding: 0.8vw 3vw;
+            font-size: 1.5vw;
+            width: 60%;
+            border-radius: 3vw;
+            margin-top: 1vw;
+         }
+
+         &__input {
+            font-size: 1.4vw;
+            width: 60%;
+         }
+      }
+
       &__after-text,
       &__description {
          max-width: 86%;
          p {
-            font-size: 1.4rem;
+            font-size: 1.4vw;
+            margin: 0.75vw 0;
          }
+      }
+      .close-btn {
+         width: 3.6vw;
+         height: 3.6vw;
       }
    }
 }
