--- a/esoteric/vite-sass/src/scss/_main.scss
+++ b/esoteric/vite-sass/src/scss/_main.scss
@@ -7,12 +7,6 @@
    flex-flow: column;
    overflow: hidden;
 
-   // background-color: var(--surface);
-
-   // overflow-y: scroll;
-   // scroll-snap-type: y mandatory;
-   // -ms-scroll-snap-type: y mandatory;
-
    &-logo {
       width: 300px;
       height: 300px;
@@ -34,7 +28,6 @@
 
 .toggle_theme-btn,
 .top-btn {
-   opacity: 0.3;
    position: absolute;
    right: 5%;
    font-size: 1.2rem;
@@ -53,6 +46,7 @@
 }
 
 .toggle_theme-btn {
+   opacity: 0.3;
    top: 1%;
    right: unset;
    border-top-right-radius: 3rem;
@@ -120,27 +114,59 @@
 
 .top-btn {
    display: none;
+   justify-content: center;
+   align-items: center;
    position: fixed;
-   bottom: 2%;
+   bottom: 5vw;
    right: 2%;
-   width: fit-content;
-   padding: 1rem;
+   height: 4.2rem;
+   width: 4.2rem;
+   padding: 0;
    margin: 0;
-   border-radius: 1rem;
+   background: var(--primary-container);
+   box-shadow: none;
+   border-radius: 0.65rem;
+   opacity: 0.4;
    z-index: 1;
 
    svg {
-      height: 2.2rem;
-      width: auto;
-      fill: var(--primary-container);
-      stroke: var(--primary-container);
+      margin: auto;
+      height: 2.4rem;
+      width: 2.4rem;
+      color: var(--on-primary);
+      fill: var(--on-primary);
+      stroke: var(--on-primary);
    }
 
+   svg g path {
+      fill: var(--on-primary);
+   }
+
+   @include mixins.viewport-md {
+      height: 4.2rem;
+      width: 4.2rem;
+      bottom: 2%;
+      svg {
+         height: 2.4rem;
+         width: 2.4rem;
+      }
+   }
+   @include mixins.viewport-lg {
+      height: 6vw;
+      width: 6vw;
+      bottom: 2vw;
+      border-radius: 1.05vw;
+      svg {
+         height: 3vw;
+         width: 3vw;
+      }
+   }
    @include mixins.viewport-xxl {
+      bottom: 2.5vw;
       padding: 1rem;
       svg {
-         height: 3rem;
-         width: 3rem;
+         height: 3.2vw;
+         width: 3.2vw;
       }
    }
 }
@@ -159,7 +185,6 @@
    margin-top: -2.25rem;
    transition: 650ms ease-in;
    z-index: 0;
-
    &.hidden {
       opacity: 0;
       transition: 650ms ease-in;
@@ -167,7 +192,6 @@
          pointer-events: none !important;
       }
    }
-
    &__button {
       height: auto;
       margin: auto;
@@ -184,7 +208,6 @@
          background: var(--surface-container);
       }
    }
-
    @include mixins.viewport-md {
       height: 12vw;
       &__button {
@@ -193,25 +216,25 @@
       }
    }
    @include mixins.viewport-lg {
-      height: 9vw;
+      height: 11vw;
       border-radius: 3vw 3vw 0 0;
       &__button {
          font-size: 2vw;
       }
    }
-
    @include mixins.viewport-xl {
+      height: 11vw;
       &__button {
          padding: 1.4rem 4rem;
          border-radius: 1rem;
       }
    }
-
    @include mixins.viewport-xxl {
+      height: 12vw;
       &__button {
-         padding: 1.4rem 4rem;
-         border-radius: 1rem;
-         font-size: 1.625rem;
+         padding: 1.4vw 4vw;
+         border-radius: 1vw;
+         font-size: 1.8vw;
       }
    }
 }
