--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -302,6 +302,9 @@
       &__text {
          font-size: 1.25rem;
       }
+      &__bg-shadow {
+         background: linear-gradient(45deg, rgba(0, 0, 0, 0.5) 40%, rgba(255, 255, 255, 0) 55%);
+      }
    }
 
    @include mixins.viewport-lg-med {
@@ -326,6 +329,10 @@
       &__button,
       &__subtitle {
          font-size: 1.25rem;
+      }
+
+      &__bg-shadow {
+         background: linear-gradient(60deg, rgba(0, 0, 0, 0.5) 30%, rgba(255, 255, 255, 0) 50%);
       }
    }
 
@@ -487,7 +494,7 @@
 
          img {
             width: 100%;
-            height: auto;
+            height: 100%;
             object-fit: cover;
             object-position: center bottom;
             box-shadow: 0rem 0rem 0 20rem rgba(var(--shadow-black), 0.7);
@@ -497,7 +504,7 @@
          object-position: center 34%;
       }
       &:nth-child(3) img {
-         object-position: center 14%;
+         object-position: center 65%;
       }
       &:nth-child(4) img {
          object-position: center 34%;
@@ -901,12 +908,17 @@
             @include mixins.viewport-lg {
                width: 60%;
                right: -10%;
+            }
+            @include mixins.viewport-xl {
                border-radius: 0 50% 50% 0 / 0 12rem 12rem 0;
+            }
+            @include mixins.viewport-xxl {
+               border-radius: 0 80% 80% 0 / 0 12vw 12vw 0;
             }
          }
 
          &:first-child p::before,
-         &:nth-child(2n)::after {
+         &:nth-child(2)::after {
             transform: rotate(180deg);
             left: -15%;
             @include mixins.viewport-lg {
@@ -914,16 +926,16 @@
             }
          }
 
-         &:first-child p::before,
          &:last-child::after {
-            border-top: 2px solid transparent;
+            border-bottom: 0;
             border-right: 2px solid transparent;
-            border-bottom-right-radius: 150%;
          }
 
          &:first-child p::before {
+            border-top: 0;
             transform: scale(-1, 1);
             top: calc(-100% - 1px);
+            border-right: 2px solid transparent;
          }
       }
    }
@@ -1234,8 +1246,12 @@
       &__conclusion-item {
          padding: 0rem 4rem;
          &::before {
-            top: 0rem;
+            top: -0.5rem;
          }
+      }
+      &__conclusion-gift {
+         width: 7.5vw;
+         height: 7.5vw;
       }
    }
    @include mixins.viewport-xxl {
@@ -1259,8 +1275,17 @@
             }
          }
       }
+      &__conclusion-gift {
+         width: 6.4vw;
+         height: 6.4vw;
+      }
       &__conclusion-item {
-         padding: 0 4vw;
+         padding: 0 3.2vw;
+         &::before {
+            width: 3vw;
+            height: 3vw;
+            top: -1rem;
+         }
       }
    }
 }
@@ -1482,6 +1507,7 @@
       padding: 1rem 0;
       & strong {
          color: var(--on-primary-container);
+         opacity: 1;
       }
    }
 
@@ -1524,22 +1550,30 @@
          padding: 1.2rem 2.6rem;
          border-radius: 2.25rem;
       }
-
       &__expand {
-         width: 3.5rem;
-         height: 3.5rem;
+         width: 4vw;
+         height: 4vw;
       }
-
       &__text {
          font-size: 1.175rem;
          padding-bottom: 2rem;
+      }
+   }
+   @include mixins.viewport-xxl {
+      &__title {
+         font-size: 1.4vw;
+         font-weight: 600;
+         padding: 0.6vw 0;
+      }
+      &__text {
+         font-size: 1.25vw;
       }
    }
 }
 
 .footer {
    margin-top: 10rem;
-   padding: 7.25rem 7vw 4rem;
+   padding: 7.25rem 7vw 14rem;
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 2.4rem;
@@ -1574,6 +1608,7 @@
    }
 
    @include mixins.viewport-md {
+      padding-bottom: 13vw;
       &__label {
          font-size: 2.64vw;
       }
@@ -1581,9 +1616,8 @@
          line-height: 2.4vw;
       }
    }
-
    @include mixins.viewport-lg {
-      padding: 5.05rem 5.05vw 3rem;
+      padding: 5.05rem 5.05vw 12vw;
       border-radius: 3rem 3rem 0 0;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr auto;
@@ -1614,6 +1648,7 @@
       }
    }
    @include mixins.viewport-xl {
+      padding-bottom: 9vw;
       &__label {
          font-size: 1.25rem;
       }
@@ -1624,6 +1659,7 @@
       }
    }
    @include mixins.viewport-xxl {
+      padding-bottom: 8vw;
       &__label {
          font-size: 1.65vw;
       }
